--- a/views/partials/backbone_templates.ejs
+++ b/views/partials/backbone_templates.ejs
@@ -3,9 +3,9 @@
   <div class='navigation'>
   <ul>
     <li><a href='#' class='index'>All Links</a></li>
-    <li><a href='#' class='create'>Shorten</a></li>
+    <li><a href='#' class='create'>Changed Shorten</a></li>
   </ul>
-    <a href='/logout' class='logout'>Logout CHANGED</a>
+    <a href='/logout' class='logout'>Logout CHANGED AGAIN</a>
   </div>
   <div id='container'></div>
 </script>
